# log-embeddings

./: README.md  download_embeddings.py  embedding_modelling.ipynb  embedding_search.ipynb  pyproject.toml
data/labels/: broad_null_1.gpkg  broad_null_2.gpkg  log_yard_1.gpkg  log_yard_10.gpkg  log_yard_11.gpkg  log_yard_2.gpkg  log_yard_3.gpkg  log_yard_4.gpkg  log_yard_5.gpkg  log_yard_6.gpkg  log_yard_7.gpkg  log_yard_8.gpkg  log_yard_9.gpkg  null_1.gpkg  null_2.gpkg  null_3.gpkg  null_4.gpkg  null_5.gpkg  null_6.gpkg  null_7.gpkg  null_8.gpkg  null_9.gpkg
